--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,9 @@
   "rules": {
     "linebreak-style": "off",
     "operator-linebreak": "off",
-    "no-unused-vars": "warn"
+    "no-unused-vars": "warn",
+    "object-curly-newline": "off",
+    "implicit-arrow-linebreak": "off",
+    "react/jsx-curly-newline": "off"
   }
 }
